--- a/atom/.atom/styles.less
+++ b/atom/.atom/styles.less
@@ -30,3 +30,8 @@ atom-text-editor {
 atom-text-editor::shadow .cursor {
   // border-color: red;
 }
+
+.tooltip {
+  // Disable annoying tab tooltips.
+  display: none !important;
+}
